--- a/API/API.csproj
+++ b/API/API.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.Imaging" Version="22.11.0" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.101.21" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
     <PackageReference Include="CloudinaryDotNet" Version="1.20.0" />
     <PackageReference Include="ImageProcessor" Version="2.9.1" />
